--- a/day37JSlibraries/package.json
+++ b/day37JSlibraries/package.json
@@ -1,10 +1,12 @@
 {
   "name": "day37jslibraries",
   "version": "1.0.0",
-  "description": "",
+  "description": "My first project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
+
   },
   "author": "",
   "license": "ISC",
